--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <li>Tilt Your Device</li>
     </ul>
     <p>Click the button to proceed</p>
-    <button onclick="proceedToIndex()">I Love You</button>
+    <button onclick="proceedToIndex()">🐰🐰🐰</button>
   </div>
 
   <script>
