--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
     <ul style="text-align: left;">
       <li>Switch to Desktop Site</li>
       <li>Tilt Your Device</li>
+      <li>Turn up the volume</li>
     </ul>
     <p>Click the button to proceed</p>
     <button onclick="proceedToIndex()">🐰🐰🐰</button>
